# qaxe

./: .gitmodules  README.md
bom/: digikey.csv  ibom.html
case/: back.stl  case.stl  grill-part1.stl  grill-part2.stl
firmware/fw-L052K8/: Cargo.toml  README.md  run.sh
firmware/fw-L072CB/: Cargo.toml
firmware/fw-L151C8/: build.sh
firmware/fw-L151CC/: Cargo.toml  README.md
firmware/fw-rev2/: Cargo.toml  run.sh
firmware/fw-rev2/.cargo/: config.toml
gerbers/: qaxe-B_Cu.gbl  qaxe-B_Mask.gbs  qaxe-B_Paste.gbp  qaxe-B_Silkscreen.gbo  qaxe-Edge_Cuts.gm1  qaxe-F_Cu.gtl  qaxe-F_Mask.gts  qaxe-F_Paste.gtp  qaxe-F_Silkscreen.gto  qaxe-In1_Cu.g2  qaxe-In2_Cu.g3  qaxe-NPTH.drl  qaxe-PTH.drl
legacy/: README.md
nerdqaxe++/bom/: digikey.csv  digikey_with_refs.csv  ibom.html
nerdqaxe++/gerbers/: nerdqaxe++-B_Cu.gbl  nerdqaxe++-B_Mask.gbs  nerdqaxe++-B_Paste.gbp  nerdqaxe++-B_Silkscreen.gbo  nerdqaxe++-Edge_Cuts.gm1  nerdqaxe++-F_Cu.gtl  nerdqaxe++-F_Mask.gts  nerdqaxe++-F_Paste.gtp  nerdqaxe++-F_Silkscreen.gto  nerdqaxe++-In1_Cu.g1  nerdqaxe++-In1_Cu.g2  nerdqaxe++-In2_Cu.g2  nerdqaxe++-In2_Cu.g3  nerdqaxe++-In3_Cu.g3  nerdqaxe++-In3_Cu.g4  nerdqaxe++-In4_Cu.g4  nerdqaxe++-In4_Cu.g5  nerdqaxe++-NPTH.drl  nerdqaxe++-PTH.drl
nerdqaxe++/nerdqaxe++/: bm1366.kicad_sch  fp-lib-table  nerdqaxe++.kicad_pro  nerdqaxe++.kicad_sch  pi.kicad_sch  power-stage.kicad_sch  power.kicad_sch
nerdqaxe+/bom/: digikey.csv  digikey_with_refs.csv  ibom.html
qaxe/: bm1366.kicad_sch  pi.kicad_sch  power.kicad_sch  qaxe.kicad_pcb  qaxe.kicad_pro  qaxe.kicad_sch
qaxe+/bom/: digikey.csv  (+1 more)
(+128 files in other folders)
