[package]
edition = "2021"
name = "embassy-stm32l1-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.5.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [ "defmt", "stm32l151c8-a", "time-driver-tim3", "memory-x"]  }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
embedded-storage = "0.3.1"

quick-protobuf = { version = "0.8.1", default-features = false }
alloc-cortex-m = "0.4.4"

embedded-io-async = { version = "0.6.1" }
static_cell = { version = "2" }

[profile.release]
debug = 2
